DBZ-9124 Update DebeziumKafkaContainer in testcontainers